# Creator

./: .replit  .replit.workflow  app.py  initialize_db.py  models.py  package-lock.json  package.json  pyproject.toml  routes.py  run.py
client/src/: App.tsx
client/src/components/dashboard/: ApplicationTracker.tsx  DailyInterviewQuestion.tsx  DashboardStats.tsx  JobSourceIntegration.tsx  LinkedInIntegration.tsx  RecentJobListings.tsx
client/src/components/interview/: AWSInterviewStats.tsx
client/src/components/jobs/: AutoApplyButton.tsx
client/src/components/layout/: Footer.tsx  Header.tsx
client/src/hooks/: use-auth.tsx  useApplications.ts  useInterviewQuestions.ts  useJobSources.ts  useLinkedInAuth.ts
client/src/lib/: protected-route.tsx  utils.ts
client/src/pages/: Applications.tsx  Community.tsx  Dashboard.tsx  InterviewPrep.tsx  JobBoard.tsx  auth-page.tsx
deployment/: DEPLOYMENT.md  README.md  README_PRODUCTION.md  ec2_setup.md  ec2_user_data.sh  requirements.txt  security_checklist.md
deployment/aws/: aws-cli-deployment.md  dynamodb-cli-commands.md
deployment/terraform/: README.md  deploy.sh  load_balancer.tf  main.tf  rds.tf  user_data.sh  variables.tf
instance/: aws_jobs.db
scripts/: extract_rds_dynamo_questions.py
server/: auth.ts  routes.ts  storage.ts
server/services/: autoApplyService.ts  interviewQuestions.ts  jobScraperService.ts  linkedinService.ts
services/: auto_apply.py  job_scraper.py  resume_matcher.py
shared/: schema.ts
templates/: index.html  interview_prep.html  job_board.html  layout.html
